static/style.css
@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap");

html, body{
  color: #ffffff;
  background-color: black;
  font-size:1.1em;
  font-family: "Poppins";
  margin: 0;
  padding: 0;
  width: 100%;
  height:100%;
}

h1{
  margin: 0;
  padding: 0;
}

h2{
 font-size:1.6rem;
}

h3{
  font-size: 1rem;
}


/* buttons */

.btn{
  text-decoration: none;
  text-align: center;
}

.btn__outline{
  color: #ffffff;
  text-decoration: none;
  display: inline-block;
  padding: 5px 10px;
}

.btn__outline:hover{
  background-color: rgba(0, 0, 0, 0.562);
  border-radius: 10px 30px;
}

footer{
  text-align: center;
}

footer p{
  margin: 20px 0 20px 0;
}

.section{
  display: block;
  position: relative;
  margin: 0;
  padding: 0;
}

.background{
  background-repeat:no-repeat;
  background-size: cover;
  background-position: bottom;
  position: absolute;
  display: block;
  width:100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

.content{
  position: relative;
  display: block;
  width:100%;
  height: 100vh;
  text-align: center;
  background-color: rgba(0,0,0,50%);
}

.title{
  position: relative;
  top: 75%;
  width: 75%;
  margin: 0 auto;
}

.title h2{
  margin: 0;
}

.title h3{
  margin: 0;
}


.feature{
  height: 100vh;
}

.feature .content{
  padding-top:10vh;
  padding-bottom: 45vh;
  height: 20vh;
  width: 70%;
  margin:0 auto;
  background-color: transparent;
}

.social-link{
  padding: 0 5px 0 5px;
  color:white;
}

.feature .scroll-prompt{
  text-align: center;
  margin: 0 auto;
  display: block;
  position: relative;
  height: 10vh;
  padding-bottom: 15vh;
  transition: all 0.5s ease;
}

.feature .scroll-prompt:hover{
  transform: translateY(25px);
}


.feature .background{
  background-image: url("background.jpg");

}

.property-value .background{
  background-image: url("projects/property-value/heatmap.jpg");
}

.growthfactor .background{
  background-image: url("projects/growthfactor/game.jpg");
}

